--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "compile": "tsc",
     "dev": "nodemon --ext ts,json --exec \"node --loader ts-node/esm src/index.ts\"",
     "start": "npm run compile && node ./dist/index.js",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "prisma": "prisma"
   },
   "keywords": [],
   "author": "",
@@ -17,15 +18,21 @@
   "dependencies": {
     "@apollo/datasource-rest": "^6.2.2",
     "@apollo/server": "^4.10.0",
+    "@prisma/client": "^5.12.1",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.19",
     "nodemon": "^3.0.3",
+    "prisma": "^5.12.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
